--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="img/logo.png" alt="Logo HRH-Automoviles" width="30" height="30"
